--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        export PYTHONPATH=src
+        export PYTHONPATH=QuantumTomography
         pytest Tests/test_app_full.py
     - name: Build and publish
       env:
