--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ StructureChange ]
   pull_request:
-    branches: [ master ]
+    branches: [ StructureChange ]
 
 jobs:
   build:
@@ -37,4 +37,4 @@ jobs:
     - name: Test with pytest
       run: |
         export PYTHONPATH=QuantumTomography
-        pytest Tests/test_app.py
+        pytest Tests/test_app_github.py
